date.css
.container-inline-date {
  width:auto;
  clear:both;
}
.container-inline-date .form-item {
  float:left;
  padding:0;
  margin:0;
}
.container-inline-date .form-item,
.container-inline-date .form-item input {
  width:auto;
}
.container-inline-date .description {
  clear: both;
}

.container-inline-date .form-item input,
.container-inline-date .form-item select,
.container-inline-date .form-item option {
  margin-right:5px;}

/* Force from/to dates to float using inline-block, where it works, otherwise inline. */
.container-inline-date {
  display: inline-block;
  vertical-align:top;
  margin-right: 0.5em;
 }

.container-inline-date .date-spacer {
  margin-left:-5px;
}
.views-right-60 .container-inline-date div {
  padding:0;
  margin:0;
}

.container-inline-date .date-timezone .form-item {
  float:none;
  width:auto;
  clear:both;
  }

/* Fixes for date popup css so it will behave in Drupal */
#calendar_div, #calendar_div td, #calendar_div th {
  margin:0;
  padding:0;
}
#calendar_div,
.calendar_control,
.calendar_links,
.calendar_header,
.calendar {
  width: 185px;
  border-collapse: separate;
  margin: 0;
}
.calendar td {
  padding: 0;
}

/* formatting for from/to dates in nodes and views */
span.date-display-single {
}
span.date-display-start {
}
span.date-display-end {
}
span.date-display-separator {
}

.date-repeat-input {
  float:left;
  width:auto;
  margin-right:5px;
}
.date-repeat-input select {
  min-width:7em;
}
.date-repeat fieldset {
  clear:both;
  float:none;
}

.date-views-filter input {
  float:left !important;
  margin-right:2px !important;
  padding:0 !important;
  width:12em;
  min-width:12em;
}

.date-nav {
  width:100%;
}
.date-nav div.date-prev {
  text-align: left;
  width:24%;
  float:left;
}
.date-nav div.date-next {
  text-align: right;
  width:24%;
  float:right;
}
.date-nav div.date-heading {
  text-align:center;
  width:50%;
  float:left;
}

.date-clear {
  clear:both;
  display:block;
}

/*
** Markup free clearing that fixes unwanted scrollbars
** @see http://drupal.org/node/232959
*/
.date-clear-block:after {
  content: " ";
  display: block;
  height: 0;
  clear: both;
  visibility: hidden;
}

.date-clear-block {
  display: inline-block;
}

/* Hides from IE-mac \*/
* html .date-clear-block {
  height: 1%;
}
.date-clear-block {
  display: block;
}
/* End hide from IE-mac */

